methods.returning.MethodsReturning.scala.error
Compilation error:
MethodsReturning:3: error: type mismatch;
 found   : Unit
 required: Boolean
  for (i <- 1 to 6) {
         ^MethodsReturning:18: warning: a pure expression does nothing in statement position; you may be omitting necessary parentheses
    return true
           ^MethodsReturning:18: warning: enclosing method run has result type Unit: return value discarded
    return true
    ^MethodsReturning:25: warning: enclosing method run has result type Unit: return value discarded
return vuBiscuit
^MethodsReturning:13: error: method run is defined twice
  conflicting symbols both originated in file 'plm.runtime1.MethodsReturning'
override def run() {
             ^